--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f2b4273a",
    "metadata": {},
    "outputs": [
@@ -39,14 +39,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, JupyterLab!\n"
+      "Hello Sindhu Megha\n"
      ]
     }
    ],
    "source": [
     "# This is a Python code cell\n",
-    "print('Hello, JupyterLab!')"
+    "print('Hello Sindhu Megha')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33c606a2",
+   "metadata": {},
+   "source": [
+    "#Sindhu Megha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "486fed97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -159,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
